--- a/app/src/main/res/layout/loading_screens.xml
+++ b/app/src/main/res/layout/loading_screens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/flipper"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -20,7 +21,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/subscribeTxt" />
+                app:layout_constraintBottom_toTopOf="@id/subscribeTxt"
+                tools:ignore="ContentDescription" />
 
         <TextView
                 android:id="@+id/subscribeTxt"
@@ -46,7 +48,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/subscribeTxt" />
+                app:layout_constraintTop_toBottomOf="@id/subscribeTxt"
+                tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -64,7 +67,8 @@
                 app:layout_constraintBottom_toTopOf="@id/shareTxt"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintVertical_chainStyle="packed" />
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:ignore="ContentDescription" />
 
         <TextView
                 android:id="@+id/shareTxt"
@@ -99,7 +103,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/sign_in_button"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
