--- a/app/src/main/res/layout/change_profile.xml
+++ b/app/src/main/res/layout/change_profile.xml
@@ -30,7 +30,8 @@
             android:src="@drawable/ic_arrow_back"
             android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="ContentDescription" />
 
     <ImageView
             android:id="@+id/changePhoto"
@@ -41,7 +42,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/changePhotoButton"
             android:foreground="@drawable/rounded_fg_light"
-            tools:ignore="ContentDescription"
+            tools:ignore="ContentDescription,UnusedAttribute"
             android:scaleType="centerCrop" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -77,7 +78,8 @@
             android:textCursorDrawable="@color/white_full"
             android:textColorHint="@color/white_full"
             android:textColor="@color/white_full"
-            android:backgroundTint="@color/white_full" />
+            android:backgroundTint="@color/white_full"
+            tools:ignore="Autofill" />
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/saveButton"
