--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -24,7 +24,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/frameLayout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/groupPic"/>
+            app:layout_constraintTop_toBottomOf="@id/groupPic" />
 
     <ImageView
             android:id="@+id/groupPic"
@@ -37,7 +37,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/text_search"
-            app:layout_constraintTop_toTopOf="@id/frameLayout" />
+            app:layout_constraintTop_toTopOf="@id/frameLayout"
+            tools:ignore="ContentDescription" />
 
     <FrameLayout
             android:id="@+id/frameLayout"
@@ -48,13 +49,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="55dp"/>
+            android:layout_marginBottom="55dp" />
 
     <androidx.appcompat.widget.SearchView
             android:id="@+id/textView_search"
             android:hint="@string/input_film_name"
             android:fontFamily="@font/rubik_bold"
-            android:textColor="@color/grey"
+            android:textColor="@color/design_default_color_on_secondary"
             android:background="@drawable/rectangle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -83,6 +84,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.885" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
