--- a/app/src/main/res/layout/fragment_search_recycler_view_item_layout.xml
+++ b/app/src/main/res/layout/fragment_search_recycler_view_item_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -80,7 +81,8 @@
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="10dp"
                         android:tag="button_not_liked"
-                        android:id="@+id/like_button_recycler_view" />
+                        android:id="@+id/like_button_recycler_view"
+                        tools:ignore="ContentDescription" />
 
             </RelativeLayout>
 
