--- a/app/src/main/res/layout/friends_profile.xml
+++ b/app/src/main/res/layout/friends_profile.xml
@@ -79,7 +79,7 @@
             app:layout_constraintBottom_toTopOf="@id/subscribeButton"
             app:layout_constraintStart_toStartOf="@id/backBtnCh"
             android:foreground="@drawable/photo"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription,UnusedAttribute" />
 
     <ImageView
             android:id="@+id/dashed"
@@ -100,7 +100,8 @@
             android:src="@drawable/ic_arrow_back"
             android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="ContentDescription" />
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/subscribeButton"
@@ -116,7 +117,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="@id/friendPhoto"
             app:layout_constraintEnd_toEndOf="@id/friendPhoto"
-            android:layout_marginTop="175dp"/>
+            android:layout_marginTop="175dp" />
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/friendListsRV"
@@ -125,26 +126,9 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/open_list_film"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="50dp"
             app:layout_constraintTop_toTopOf="@id/dashed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-<!--    <androidx.appcompat.widget.AppCompatButton-->
-<!--            android:id="@+id/show_all"-->
-<!--            android:layout_width="115dp"-->
-<!--            android:layout_height="25dp"-->
-<!--            android:textColor="@color/white_full"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textAllCaps="false"-->
-<!--            android:textSize="14sp"-->
-<!--            android:textAlignment="center"-->
-<!--            android:text="@string/show_all_string"-->
-<!--            android:background="@drawable/subscribe"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            android:layout_marginStart="11dp"-->
-<!--            android:layout_marginBottom="55dp" />-->
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
