--- a/app/src/main/res/layout/friends_search.xml
+++ b/app/src/main/res/layout/friends_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/fragmentSearch"
@@ -11,28 +10,28 @@
         android:background="#ED959E">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBar"
+            android:id="@+id/appBar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/red_200">
+            android:background="@color/red_200">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolBar"
+                android:id="@+id/toolBar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/red_200">
 
             <TextView
-                android:id="@+id/titleSearch"
+                    android:id="@+id/titleSearch"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                android:text="Поиск друзей"
+                    android:text="@string/friends_search"
                     android:fontFamily="@font/rubik_bold"
                     android:textSize="24sp"
                     android:textColor="@color/white_full"
-                    android:gravity="center"/>
+                    android:gravity="center" />
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -48,7 +47,8 @@
             app:layout_constraintTop_toBottomOf="@id/appBar"
             android:hint="@string/input_friend_name"
             android:background="@color/white_full"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            tools:ignore="Autofill,TextFields" />
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -62,51 +62,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/search_user_item"/>
-
-<!--    <FrameLayout-->
-<!--            android:id="@+id/frameLayout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="0dp"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/submitBtn"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            android:layout_marginBottom="55dp"/>-->
-
-<!--    <androidx.appcompat.widget.SearchView-->
-<!--            android:id="@+id/searchView"-->
-<!--            android:hint="@string/input_friend_name"-->
-<!--            android:fontFamily="@font/rubik_bold"-->
-<!--            android:textColor="@color/grey"-->
-<!--            android:background="@drawable/rectangle"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="40dp"-->
-<!--            android:gravity="center"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:searchIcon="@null"-->
-<!--            app:iconifiedByDefault="false"-->
-<!--            android:focusable="true" />-->
-
-<!--    <androidx.appcompat.widget.AppCompatButton-->
-<!--            android:id="@+id/submitBtn"-->
-<!--            android:layout_width="65dp"-->
-<!--            android:layout_height="32dp"-->
-<!--            android:background="@drawable/rectangle_red"-->
-<!--            android:layout_marginStart="5dp"-->
-<!--            android:layout_marginTop="100dp"-->
-<!--            android:text="@string/find_button"-->
-<!--            android:fontFamily="@font/rubik_bold"-->
-<!--            android:textSize="13sp"-->
-<!--            android:textColor="@color/white_full"-->
-<!--            android:textAllCaps="false"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintHorizontal_bias="0.885" />-->
+            tools:listitem="@layout/search_user_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
