--- a/app/src/main/res/layout/lists_menu.xml
+++ b/app/src/main/res/layout/lists_menu.xml
@@ -6,7 +6,8 @@
         android:layout_height="match_parent"
         android:background="@color/red_200"
         android:clickable="true"
-        android:id="@+id/list_of_movie">
+        android:id="@+id/list_of_movie"
+        android:focusable="true">
 
     <ImageButton
             android:id="@+id/backBtn"
@@ -17,17 +18,8 @@
             android:background="@android:color/transparent"
             android:layout_margin="16dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-   <!-- <ImageButton
-            android:id="@+id/addBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_without_circle"
-            android:background="@android:color/transparent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/higherDots" />-->
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="ContentDescription" />
 
     <ImageButton
             android:id="@+id/higherDots"
@@ -38,7 +30,8 @@
             android:layout_marginEnd="4dp"
             app:layout_constraintTop_toTopOf="@id/backBtn"
             app:layout_constraintBottom_toBottomOf="@id/backBtn"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="ContentDescription" />
 
     <TextView
             android:id="@+id/listTitle"
@@ -67,7 +60,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:foreground="@drawable/round"
             app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintHeight_percent="0.15"/>
+            app:layout_constraintHeight_percent="0.15"
+            tools:ignore="ContentDescription,UnusedAttribute" />
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/filmListRecyclerView"
@@ -77,6 +71,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/listIcon"
             tools:listitem="@layout/list_menu_film"
-            android:layout_marginBottom="55dp"/>
+            android:layout_marginBottom="55dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
