--- a/app/src/main/res/layout/subscription_item.xml
+++ b/app/src/main/res/layout/subscription_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/red_400"
         android:padding="8dp"
         android:background="@drawable/border"
-        android:layout_marginBottom="12dp" >
+        android:layout_marginBottom="12dp">
 
     <ImageView
             android:id="@+id/profilePic"
@@ -17,7 +18,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/ic_profile_circle_24"
             android:foreground="@drawable/photo"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription,UnusedAttribute" />
 
     <TextView
             android:id="@+id/profileName"
@@ -31,6 +33,7 @@
             android:fontFamily="@font/rubik_bold"
             android:textColor="@color/white_full"
             android:textSize="22sp" />
+
     <ImageButton
             android:id="@+id/likeProfile"
             android:layout_width="wrap_content"
@@ -39,6 +42,7 @@
             android:layout_marginEnd="8dp"
             android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="@id/profilePic"
-            app:layout_constraintBottom_toBottomOf="@id/profilePic" />
+            app:layout_constraintBottom_toBottomOf="@id/profilePic"
+            tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
