--- a/app/src/main/res/layout/list_fav_menu_film.xml
+++ b/app/src/main/res/layout/list_fav_menu_film.xml
@@ -30,11 +30,25 @@
             android:layout_marginStart="16dp"
             android:fontFamily="@font/rubik_bold"
             android:textSize="14sp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textColor="@color/white_full" />
 
     <TextView
-            android:id="@+id/lmFilmGenre"
+            android:id="@+id/lmFilmYear"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/lmFilmTitle"
+            app:layout_constraintTop_toTopOf="@id/lmFilmTitle"
+            tools:text="1994"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/rubik_bold"
+            android:textSize="14sp"
+            android:textColor="@color/another_white" />
+
+    <TextView
+            android:id="@+id/lmFilmGenre"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@id/lmFilmPoster"
             app:layout_constraintStart_toStartOf="@id/lmFilmTitle"
@@ -53,22 +67,11 @@
             app:layout_constraintBottom_toBottomOf="@id/lmFilmPoster"
             app:layout_constraintStart_toEndOf="@id/lmFilmGenre"
             app:layout_constraintTop_toBottomOf="@id/lmFilmTitle"
+            app:layout_constraintEnd_toStartOf="@id/like_in_adapter"
             android:layout_marginStart="20dp"
             android:textSize="14sp"
             android:fontFamily="@font/rubik_bold"
             android:textColor="@color/red_500" />
-
-    <TextView
-            android:id="@+id/lmFilmYear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/lmFilmTitle"
-            app:layout_constraintTop_toTopOf="@id/lmFilmTitle"
-            tools:text="1994"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/rubik_bold"
-            android:textSize="14sp"
-            android:textColor="@color/another_white" />
 
     <ImageButton
             android:id="@+id/like_in_adapter"
