Fckn magic numbers

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="hint_size">16sp</dimen>
+    <item name="sixteen" format="float" type="dimen">16.0</item>
 </resources>
